# Sphinx-Sticky-Margin

./: MANUAL.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/sphinx_sticky_margin/: __init__.py
src/sphinx_sticky_margin/assets/: sticky-margin.css  sticky-margin.js
